# BattonY

./: .gitignore  README.md  pyproject.toml
battony/: __init__.py  __main__.py  app.py  battony.tcss  buffer.py  colors.py  commands.py  config.py  splash.py
battony/irc/: __init__.py  client.py  message.py  numerics.py
battony/ui/: __init__.py  chatview.py  help.py  input.py  nicklist.py  sidebar.py  statusbar.py
