[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battony"
version = "0.1.0"
description = "A modern, glorious, BitchX-inspired IRC client for the terminal"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "BattonY" }]
keywords = ["irc", "tui", "terminal", "chat", "bitchx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
]
dependencies = [
    "textual>=0.80.0",
    "rich>=13.7.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "platformdirs>=4.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
battony = "battony.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["battony*"]

[tool.setuptools.package-data]
battony = ["*.tcss", "assets/*"]

[tool.ruff]
line-length = 100
target-version = "py310"
